# fptools

./: .gitignore  .pylintrc  CHANGLOG.md  Pipfile  README.md  iterable.py  plan.md  poetry.toml  pyproject.toml  sequence.py  setup.py  test_callable.py  test_sequence.py
docs/: asset-manifest.json  index.html  manifest.json  precache-manifest.13668706f162b7bb79c599f6a063b003.js  precache-manifest.1959dd16d928efa8203b4a18c1399218.js  precache-manifest.1b6d8a36fac47c468d6526d25691bf72.js  precache-manifest.244036ea7202739573382485020eeae2.js  precache-manifest.4e266eb5c7cf29cc3a523b8165a18339.js  precache-manifest.4ff3173916cf054a54a48fa74d2a6912.js  precache-manifest.5afd5e10895b6b8f96d616bdd5dd9ba5.js  precache-manifest.6b44bf6eae5d742fedb5216130789c3d.js  precache-manifest.6d836ffb7fa40b55a78c836749f9d797.js  precache-manifest.714c453fc460ae46fc5ac81c3341e4f6.js  precache-manifest.73fc50756a5e24053aa009844fbd8c2f.js  precache-manifest.b7c0e350b1f19c1fd16249f6d662bd4d.js  precache-manifest.bd1e2a8b16e1918f0530f5ffb9efb35f.js  precache-manifest.cd2ca341dc6769a5fae32308da8ed5c2.js  precache-manifest.eb4b1eabb76c188f32f9d6747dde431c.js  precache-manifest.fbeef19f7052e386efe6fc2c1d72b960.js  service-worker.js
docs_src/: package.json
documentation_generator/: __init__.py  __main__.py  docs.py
fptools/: __init__.py  callable.py  collection.py  dictionary.py  iterable.py  mapping.py  sequence.py  test_dictionary.py  test_iterable.py  test_sequence.py
fptools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ftools/: callable.py  collection.py  iterable.py  (+3 more)
(+75 files in other folders)
